# CppTools

./: README.md
CMake/Project1/: CMakeLists.txt  Config.h.in  test_math.cxx
CMake/Project1/Utility/: CMakeLists.txt
Cpp17/: Cpp17_features.txt  Cpp17_features.txt.bak
Cpp17/1.Inline_Global_Var/: CMakeLists.txt  constant.h  main.cpp
Cpp17/2.Nested_namspace/: CMakeLists.txt  nested_namespace.cxx
CppPattern/Rule_of_five/: rule_of_five.hpp  rule_of_five.txt
